<resources>
    <string name="app_name">Checkout Demo</string>
    <string name="action_settings">Settings</string>
    <string name="items">Items</string>
    <string name="image_content_description">image</string>
    <string name="shirt">Shirt</string>
    <string name="pants">Pants</string>
    <string name="shoes">Shoes</string>
    <string name="go_to_cart">Go to Cart</string>

    <string name="cart">Cart</string>
    <string name="contact">Contact</string>
    <string name="shipping">Shipping</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>

    <string name="other_payment_methdod">Other Payment Method</string>
    <string name="payment_config">Payment Configuration</string>
    <string name="config">Configuration</string>
    <string name="public_token">Public Token</string>
    <string name="timeout">Timeout</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="default_language">Default</string>
    <string name="sdk_version">SDK Version</string>

    <string name="build_type">Environment</string>
    <string name="production">Production</string>
    <string name="quality">Quality - CERT</string>
    <string name="quality_dev">Quality - DEV</string>
    <string name="pilot">Pilot</string>
    <string name="development">Development</string>

    <string name="configuration_message">Payment will be sent to the account of the provided Public Token for the provided Payment Amount. Enter "dummy" for token to simulate payment.</string>
    <string name="optional_parameters">Optional Parameters</string>
    <string name="metadata_1">Metadata1</string>
    <string name="metadata_2">Metadata2</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="public_token_alert_title">Change Public Token</string>
    <string name="public_token_alert_message">Provide the token of the account that will receive the payment.</string>

    <string name="timeout_alert_title">Change Timeout</string>
    <string name="timeout_alert_message">Provide a timeout value for the payment process in seconds.</string>
    
    <string name="payment_alert_title">Change Payment Amount</string>
    <string name="payment_alert_message">Provide the amount to process the payment for.</string>

    <string name="subtotal_alert_title">Change Subtotal</string>
    <string name="subtotal_alert_message">Provide the subtotal to process the payment for.</string>

    <string name="tax_alert_title">Change Tax Amount</string>
    <string name="tax_alert_message">Provide the tax to process the payment for.</string>

    <string name="metadata1_alert_title">Change Metadata1</string>
    <string name="metadata1_alert_message">Provide the metadata1 to process the payment for.</string>

    <string name="metadata2_alert_title">Change Metadata2</string>
    <string name="metadata2_alert_message">Provide the metadata2 to process the payment for.</string>

    <string name="close">Close</string>
    <string name="payment_response">Payment Response</string>

    <string name="status">Status</string>
    <string name="reference_number">Reference Number</string>
    <string name="add_default_item">Add default item</string>
    <string name="add_custom_item">Add custom item</string>
    <string name="send_null">Send null</string>
    <string name="ATHM_COMPLETED_STATUS">CompletedPayment</string>
    <string name="ATHM_CANCELLED_STATUS">CancelledPayment</string>
    <string name="ATHM_EXPIRED_STATUS">ExpiredPayment</string>
    <string name="ATHM_NOTFOUND_STATUS">PaymentNotFound</string>
    <string name="si_string">Yes</string>
    <string name="no_string">No</string>
    <string name="phoneNumber_alert_title">Change Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="phoneNumber_alert_message">Provide the Phone Number to process the payment for</string>
</resources>
