<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="SpUsage"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/items"
                android:layout_centerInParent="true"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_settings"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ripple_background_white_rectangle"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/image_content_description"
                />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItemsList"
        android:layout_marginTop="65dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:id="@+id/btnGotToCart"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/ripple_button_black"
        android:text="@string/go_to_cart"
        android:textColor="@color/colorPrimary"
        app:fontFamily="sans-serif-medium"
        android:textSize="16dp"
        />
    <Button
        android:id="@+id/btnAddDefaultItem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ripple_button_black"
        android:text="@string/add_default_item"
        android:textColor="@color/colorPrimary"
        app:fontFamily="sans-serif-medium"
        android:textSize="16dp"
        />
    <Button
        android:id="@+id/btnAddCustomItem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ripple_button_black"
        android:text="@string/add_custom_item"
        android:textColor="@color/colorPrimary"
        app:fontFamily="sans-serif-medium"
        android:textSize="16dp"
        />
</RelativeLayout>
</layout>