<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".CartActivity"
        tools:ignore="SpUsage"
        >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cart"
                    android:layout_centerInParent="true"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_arrow_back"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/ripple_pure_white_oval"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/image_content_description"
                    android:layout_marginStart="2dp"
                    />
            </RelativeLayout>
        </android.support.design.widget.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnAthmCheckout"
            android:layout_below="@+id/appBar"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textColor="@color/colorAccent"
                        android:textSize="16dp"
                        android:layout_weight="1"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Daniel Martinez"
                            android:textColor="@color/colorAccent"
                            android:textSize="16dp"
                            app:fontFamily="sans-serif-medium"
                            android:layout_gravity="end"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="daniel.martinez@email.com"
                            android:textColor="@color/colorAccent"
                            android:textSize="16dp"
                            android:layout_gravity="end"
                            />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividers"
                    android:layout_marginStart="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/shipping"
                        android:textColor="@color/colorAccent"
                        android:textSize="16dp"
                        android:layout_weight="1"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Cond. Vivienda Apt. 123"
                            android:textColor="@color/colorAccent"
                            android:textSize="16dp"
                            app:fontFamily="sans-serif-medium"
                            android:layout_gravity="end"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="San Juan, PR 00926"
                            android:textColor="@color/colorAccent"
                            android:textSize="16dp"
                            android:layout_gravity="end"
                            />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividers"
                    android:layout_marginStart="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/subtotal"
                        android:textColor="@color/colorAccent"
                        android:textSize="16dp"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/tvSubtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$0.0"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"
                        app:fontFamily="sans-serif-medium"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividers"
                    android:layout_marginStart="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tax"
                        android:textColor="@color/colorAccent"
                        android:textSize="16dp"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$0.0"
                        android:id="@+id/tvTax"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"
                        app:fontFamily="sans-serif-medium"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividers"
                    android:layout_marginStart="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@color/colorAccent"
                        android:textSize="16dp"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$0.0"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp"
                        app:fontFamily="sans-serif-medium"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividers"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </ScrollView>
        <com.evertecinc.athmovil.sdk.checkout.PayButton
            android:id="@+id/btnAthmCheckout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_above="@id/btnOtherPaymentMethods"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            />
        <Button
            android:id="@+id/btnOtherPaymentMethods"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="18dp"
            android:text="@string/other_payment_methdod"
            android:textColor="@color/colorPrimary"
            app:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:background="@drawable/ripple_button_black"
            />
        <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_above="@id/btnOtherPaymentMethods"
            android:visibility="invisible"
            android:indeterminateTint="@color/dividers"
            android:elevation="3dp"/>
    </RelativeLayout>
</layout>